--- a/src/main/twirl/views/register.scala.html
+++ b/src/main/twirl/views/register.scala.html
@@ -2,17 +2,18 @@
 
 <html>
     <head>
-        <title>Reminder Login</title>
+        <title>Reminder Register</title>
         <link rel="stylesheet" href="css/login.css">
     </head>
     
     <body>
-        <div class="login_form_top">
-            <h1>login</h1>
+        <div class="register_form_top">
+            <h1>register</h1>
           </div>
-        <form name="login_form" action="http://0.0.0.0:8080/login" method="post">
+        <form name="register_form" action="http://0.0.0.0:8080/register" method="post">
             <input type="id" name="user_id" placeholder="ユーザーID">
             <input type="password" name="password" placeholder="パスワード">
+            <input type="password" name="password2" placeholder="パスワード">
             <input type="submit"/>
         </form>
     </body>
